+++++++++++
FCT Changes
+++++++++++

Whats new in FCT 1.1
====================

 - CMAKE used for building the FCT tests.
 - #376783: Added test to make sure we continue to compile against a C++ 
   project.

Whats new in FCT 1.0.1
======================

 - #376783: Applied proper casting so the header works within a C++ project. 