@@ -16,7 +16,6 @@ ADD_EXECUTABLE(test_1suite test_1suite.c)
 
 ADD_EXECUTABLE(test_count test_count.c)
 ADD_EXECUTABLE(test_fail test_fail.c)
-ADD_EXECUTABLE(test_kern test_kern.c)
 ADD_EXECUTABLE(test_money test_money.c)
 ADD_EXECUTABLE(test_multi test_multi.c)
 ADD_EXECUTABLE(test_two_names test_two_names.c)
@@ -66,7 +65,6 @@ ENABLE_TESTING()
 ADD_TEST(run_test_basic test_basic)
 ADD_TEST(run_test_1suite test_1suite)
 ADD_TEST(run_test_count test_count)
-ADD_TEST(run_test_kern test_kern)
 ADD_TEST(run_test_money test_money)
 ADD_TEST(run_test_multi test_multi)
 ADD_TEST(run_test_two_names test_two_names)
