@@ -1,22 +1,0 @@
-/*
-====================================================================
-Copyright (c) 2008 Ian Blumel.  All rights reserved.
-
-This software is licensed as described in the file LICENSE, which
-you should have received as part of this distribution.  
-====================================================================
-
-File: test_kern.c
-
-This simply tests the kernal creation and destruction.
-*/
-
-#include "fct.h"
-
-FCT_BGN() {
-   FCT_FIXTURE_SUITE_BGN(Test_1Suite) {
-
-   } FCT_FIXTURE_SUITE_END();
-} FCT_END();
-
-
